CHANGES.txt for Tux Paint

Tux Paint - A simple drawing program for children.

Copyright (c) 2003 by Bill Kendrick
bill@newbreedsoftware.com
http://www.newbreedsoftware.com/tuxpaint/


2003.Sep.28 (0.9.13) [cvs]
  * Translated into Tamil  [buggy]
    Mugunth <mugunth@thamizha.com>

  * Made sure options were in the same order in various places in man page
    and documentation.  Made sure all options and languages were listed.

  * Added stamp controls to mirror, flip and resize stamps before placing
    them.  Some stamps can be set to not be mirror-, flip- or resize-able.
    (Place "noflip", "nomirror" and/or "noresize" in the stamps' ".dat"
    option files.)  Stamps can have alternative mirror-images (e.g., to
    show a shape the opposite direction, but not have backwards text on it).
    Create "filename_mirror.png" image files.  [PENDING]

  * Added "--nostampcontrols", "--mirrorstamps" and their opposite options,
    to disable stamp controls, and default to mirrored stamp shapes,
    (or not), respectively.

  * Fixed incorrect tag in HTML documentation.  (Bad results in IE)

  * Fixed typo regarding "savedir" in README.

  * 'printcfg' options not displayed in usage, except on Win32.

  * Moved available language listing to its own usage, shown when
    "--lang" called incorrectly, or as "--lang list" or "--lang help".
    (Suggested by Ben Armstrong)

  * Reorganized usage display
    (Suggested by Ben Armstrong)

  * If the top-left-most file is deleted in the Open screen, it now
    scrolls up one line (so that the cursor isn't off the top of the
    screen!)

  * Cleaned up font aliasing blurriness and JPEG noise in title image.

  * Updated copyright date in title image.
 
  * Cursor doesn't change to 'hand' shape over color buttons when colors
    aren't available (e.g., Magic tool, most Stamps, etc.)

  * Cursor doesn't change to 'hand' shape over selector buttons when
    they aren't available.
